--- a/scoring_newkarak_case_study.ipynb
+++ b/scoring_newkarak_case_study.ipynb
@@ -139,7 +139,7 @@
         "button.on_click(on_button_clicked)\n",
         "display(button, output)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,21 +264,26 @@
       "metadata": {
         "id": "5TQsHPPAoHXu",
         "colab_type": "code",
-        "outputId": "471844f1-e507-4cb0-edb9-440934eabdf8",
+        "outputId": "53e26b99-4d95-461e-811d-9e8c5e1b2bda",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 119
         }
       },
       "source": [
         "!git clone https://github.com/LouisCMS/Scoring-training.git"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'Scoring-training' already exists and is not an empty directory.\n"
+            "Cloning into 'Scoring-training'...\n",
+            "remote: Enumerating objects: 19, done.\u001b[K\n",
+            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 19 (delta 5), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (19/19), done.\n"
           ],
           "name": "stdout"
         }
@@ -612,6 +617,8 @@
       "metadata": {
         "id": "PlwSN3niqBBs",
         "colab_type": "code",
+        "cellView": "form",
+        "outputId": "b1dfc55a-5a43-4c3e-d71b-faabb71a66f5",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/colabwidgets/controls.css": {
@@ -629,9 +636,7 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 49
-        },
-        "cellView": "form",
-        "outputId": "b1dfc55a-5a43-4c3e-d71b-faabb71a66f5"
+        }
       },
       "source": [
         "#@title\n",
@@ -642,7 +647,7 @@
         "    disabled=False\n",
         ")"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
