--- a/scoring-newkarak-case-study.ipynb
+++ b/scoring-newkarak-case-study.ipynb
@@ -68,8 +68,11 @@
       "metadata": {
         "id": "2bssycaW635_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a4ddb9f3-7bba-4609-d040-2ce1f595407a"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "b015c813-f09e-41ed-e438-591242a7b031"
       },
       "source": [
         "# Base Data Science snippet\n",
@@ -93,7 +96,7 @@
         "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
         "display(HTML(\"<script>$('div.cell.selected').next().height(100);</script>\"))"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -169,13 +172,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MuLqwHlt636E",
+        "id": "CCs_0wi67YYY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "doc_input = u'C:/Users/epierard/Ekimetrics/Louis CAMUS - 0. Scoring/3. Models/Kaggle/Lead scoring/input/final_data.csv'\n",
-        "table=pd.DataFrame(pd.read_csv(doc_input, sep=\";\"))"
+        "data_url = 'https://raw.githubusercontent.com/LouisCMS/Scoring-training/master/table-processed.csv'\n",
+        "table = pd.read_csv(data_url)\n",
+        "# Dataset is now stored in a Pandas Dataframe"
       ],
       "execution_count": 0,
       "outputs": []
