--- a/scoring-newkarak-case-study.ipynb
+++ b/scoring-newkarak-case-study.ipynb
@@ -177,9 +177,9 @@
         "colab": {}
       },
       "source": [
+        "# Loading the data from github and storing it into pandas dataframe named \"table\"\n",
         "data_url = 'https://raw.githubusercontent.com/LouisCMS/Scoring-training/master/table-processed.csv'\n",
-        "table = pd.read_csv(data_url)\n",
-        "# Dataset is now stored in a Pandas Dataframe"
+        "table = pd.read_csv(data_url)\n"
       ],
       "execution_count": 0,
       "outputs": []
