--- a/scoring-newkarak-case-study.ipynb
+++ b/scoring-newkarak-case-study.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "scoring-newkarak-case-study.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LouisCMS/Scoring-training/blob/master/scoring-newkarak-case-study.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -68,11 +79,11 @@
       "metadata": {
         "id": "2bssycaW635_",
         "colab_type": "code",
+        "outputId": "b015c813-f09e-41ed-e438-591242a7b031",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "b015c813-f09e-41ed-e438-591242a7b031"
+        }
       },
       "source": [
         "# Base Data Science snippet\n",
@@ -96,7 +107,7 @@
         "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
         "display(HTML(\"<script>$('div.cell.selected').next().height(100);</script>\"))"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -241,8 +252,8 @@
       "metadata": {
         "id": "W9N7yWk9636M",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "187df6f9-5a63-4ee9-e9a8-656ed91f8e76"
+        "outputId": "187df6f9-5a63-4ee9-e9a8-656ed91f8e76",
+        "colab": {}
       },
       "source": [
         "for c in table.columns:\n",
@@ -394,8 +405,8 @@
       "metadata": {
         "id": "aliUe-SL636P",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "9e505ddb-dbda-4370-8ce1-84225468f0ce"
+        "outputId": "9e505ddb-dbda-4370-8ce1-84225468f0ce",
+        "colab": {}
       },
       "source": [
         "table.isnull().sum()"
@@ -633,8 +644,8 @@
       "metadata": {
         "id": "JSNpTI1M636i",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "288b69cb-ad14-4c20-e0ac-cab1c162c51d"
+        "outputId": "288b69cb-ad14-4c20-e0ac-cab1c162c51d",
+        "colab": {}
       },
       "source": [
         "# Visualizing the scores using y_pred_proba_lr\n",
@@ -775,8 +786,8 @@
       "metadata": {
         "id": "rgjMnzsn636w",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "60d0f8ff-11e7-49a3-8133-eb53d183f02a"
+        "outputId": "60d0f8ff-11e7-49a3-8133-eb53d183f02a",
+        "colab": {}
       },
       "source": [
         "# compute classification accuracy for the logistic regression model\n",
@@ -843,8 +854,8 @@
         "scrolled": true,
         "id": "rj4nmoqY636z",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "27f649b4-7c5a-40c2-f4ab-f8fa69cdef72"
+        "outputId": "27f649b4-7c5a-40c2-f4ab-f8fa69cdef72",
+        "colab": {}
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
@@ -903,8 +914,8 @@
       "metadata": {
         "id": "Mx_VOJ6p6362",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e47087de-0563-4a4b-f573-98948ed4c8a5"
+        "outputId": "e47087de-0563-4a4b-f573-98948ed4c8a5",
+        "colab": {}
       },
       "source": [
         "# (TP + TN) / (TP + TN + FP + FN)\n",
@@ -942,8 +953,8 @@
       "metadata": {
         "id": "VQgty1-46364",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "45b01e80-b0a7-4b36-e375-de7cc33ee678"
+        "outputId": "45b01e80-b0a7-4b36-e375-de7cc33ee678",
+        "colab": {}
       },
       "source": [
         "#classification_error = (FP + FN) / float(TP + TN + FP + FN)\n",
@@ -986,8 +997,8 @@
       "metadata": {
         "id": "RjCm2TTh6368",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ad2c2a67-c7a4-4b5b-f2e9-b7c3b7fc9ad1"
+        "outputId": "ad2c2a67-c7a4-4b5b-f2e9-b7c3b7fc9ad1",
+        "colab": {}
       },
       "source": [
         "i=1\n",
@@ -1026,8 +1037,8 @@
       "metadata": {
         "id": "XyHiNdg1636_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3b1020e4-b7fc-41f7-9731-b8747e11e41e"
+        "outputId": "3b1020e4-b7fc-41f7-9731-b8747e11e41e",
+        "colab": {}
       },
       "source": [
         "i = 1\n",
@@ -1067,8 +1078,8 @@
       "metadata": {
         "id": "u8U8dA9W637B",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "8ada59e8-d315-486e-a02a-3b28cf6ec65a"
+        "outputId": "8ada59e8-d315-486e-a02a-3b28cf6ec65a",
+        "colab": {}
       },
       "source": [
         "# specificity = TN / (TN + FP)\n",
@@ -1108,8 +1119,8 @@
       "metadata": {
         "id": "nlBflBri637D",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0202898c-01b7-4234-847b-4cddc5ef19c3"
+        "outputId": "0202898c-01b7-4234-847b-4cddc5ef19c3",
+        "colab": {}
       },
       "source": [
         "#false_positive_rate = FP / float(TN + FP)\n",
@@ -1237,8 +1248,8 @@
       "metadata": {
         "id": "zOfddByw637K",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "76e4dfbe-0a25-4ef0-a2e8-906aafa080f7"
+        "outputId": "76e4dfbe-0a25-4ef0-a2e8-906aafa080f7",
+        "colab": {}
       },
       "source": [
         "# IMPORTANT: first argument is true values, second argument is predicted probabilities\n",
@@ -1312,8 +1323,8 @@
       "metadata": {
         "id": "I69zS35_637N",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4afd2f26-043a-46bf-801b-98bf4cb3278f"
+        "outputId": "4afd2f26-043a-46bf-801b-98bf4cb3278f",
+        "colab": {}
       },
       "source": [
         "# Let's compare thresholds on Logistic Regression and XGBoost\n",
@@ -1354,8 +1365,8 @@
       "metadata": {
         "id": "R4FPbQ4Z637P",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "53a1f98c-e232-49db-bc62-d8c763ca0ff1"
+        "outputId": "53a1f98c-e232-49db-bc62-d8c763ca0ff1",
+        "colab": {}
       },
       "source": [
         "# Let's compare thresholds on Logistic Regression and XGBoost\n",
